# pickel

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.ja.md  README.md  pickel  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  version-sync.yml
commands/: cost.md  last.md  search.md  setup.md
docs/briefs/: BRIEF-MINE-V050.md  BRIEF-RECALL-WRAP-V060.md
hooks/: hooks.json
skills/conversation-mining/: SKILL.md
src/pickel/: __init__.py  cli.py
tests/: smoke.sh
tests/fixtures/projects/-Users-alice--ghq-github-com-org-my-cool-app/: session1.jsonl
tests/fixtures/projects/test-project/: session1.jsonl
