[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "pickel-cli"
version = "0.6.0"
description = "A pickaxe for mining Claude Code conversation logs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "ClaudeCodeCafe" },
]
keywords = ["claude", "claude-code", "cli", "conversation", "logs", "search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/ClaudeCodeCafe/pickel"
Repository = "https://github.com/ClaudeCodeCafe/pickel"
Issues = "https://github.com/ClaudeCodeCafe/pickel/issues"

[project.scripts]
pickel = "pickel.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pickel"]
